objects/Academic_department__c.object
<CustomObject>
    <fields>
        <fullName>Education_Cost_Sum__c</fullName>
        <label>Education Cost Sum</label>
        <summarizedField>Student_group__c.Education_Cost_Sum__c</summarizedField>
        <summaryForeignKey>Student_group__c.Academic_department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Employees_number__c</fullName>
        <label>Employees number</label>
        <summaryForeignKey>University_employee__c.Academic_department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Academic departments</relationshipLabel>
        <relationshipName>Academic_departments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salaries_Sum__c</fullName>
        <label>Salaries Sum</label>
        <summarizedField>University_employee__c.Salary__c</summarizedField>
        <summaryForeignKey>University_employee__c.Academic_department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scholarships_Sum__c</fullName>
        <label>Scholarships Sum</label>
        <summarizedField>Student_group__c.Scholarship_Sum__c</summarizedField>
        <summaryForeignKey>Student_group__c.Academic_department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Students_Number__c</fullName>
        <label>Students Number</label>
        <summarizedField>Student_group__c.Students_Number__c</summarizedField>
        <summaryForeignKey>Student_group__c.Academic_department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Academic department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Academic department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>